--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==8.1.5
 joblib==1.3.1
 numpy==1.25.1
 pandas==2.0.3
+pyarrow==12.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
