--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 click==8.1.6
 cmake==3.27.0
 filelock==3.12.2
+flake8==6.0.0
 Jinja2==3.1.2
 joblib==1.3.1
 lit==16.0.6
 MarkupSafe==2.1.3
+mccabe==0.7.0
 mpmath==1.3.0
 networkx==3.1
 numpy==1.25.1
@@ -20,6 +22,8 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 pandas==2.0.3
+pycodestyle==2.10.0
+pyflakes==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
